--- a/ReportUnit/Templates/Reports.cshtml
+++ b/ReportUnit/Templates/Reports.cshtml
@@ -24,7 +24,7 @@
 
             <ul class='left'>
                 <li class='logo'>
-                    <a href='http://reportunit.relevantcodes.com/'><span>ReportUnit</span></a>
+                    <a href='/results'><span>← To Results</span></a>
                 </li>
             </ul>
 
@@ -40,45 +40,6 @@
     </div>
     <div class='main'>
         <div class='main-wrap'>
-            <!--<div class='row dashboard'>
-                <div class='col s12 m6 l4'>
-                    <div class='card-panel'>
-                        <div alt='Count of all passed tests' title='Count of all passed tests'>Suite Summary</div>
-                        <div class='chart-box'>
-                            <canvas class='text-centered' id='suite-analysis'></canvas>
-                        </div>
-                        <div>
-                            <span class='weight-light'><span class='suite-pass-count weight-normal'></span> suites(s) passed</span>
-                        </div>
-                        <div>
-                            <span class='weight-light'><span class='suite-fail-count weight-normal'></span> suites(s) failed, <span class='suite-others-count weight-normal'></span> others</span>
-                        </div>
-                    </div>
-                </div>
-                <div class='col s12 m6 l4'>
-                    <div class='card-panel'>
-                        <div alt='Count of all failed tests' title='Count of all failed tests'>Tests Summary</div>
-                        <div class='chart-box'>
-                            <canvas class='text-centered' id='test-analysis'></canvas>
-                        </div>
-                        <div>
-                            <span class='weight-light'><span class='test-pass-count weight-normal'></span> test(s) passed</span>
-                        </div>
-                        <div>
-                            <span class='weight-light'><span class='test-fail-count weight-normal'></span> test(s) failed, <span class='test-others-count weight-normal'></span> others</span>
-                        </div>
-                    </div>
-                </div>
-                <div class='col s12 m12 l4'>
-                    <div class='card-panel'>
-                        <div alt='Count of all inconclusive tests' title='Count of all inconclusive tests'>Pass Percentage</div>
-                        <div class='panel-lead pass-percentage'></div>
-                        <div class='progress'>
-                            <div class='determinate'></div>
-                        </div>
-                    </div>
-                </div>
-            </div>-->
             <div class='row'>
                 <div class='col s12'>
                     <div class='card-panel report-list no-margin-v'>
@@ -88,18 +49,39 @@
                                     <th>#</th>
                                     <th>Fixture</th>
                                     <th>Test</th>
-                                    <th>Phase 1</th>
-                                    <th>Phase 2</th>
-                                    <th>Phase 3</th>
+                                    @for(int j = 1; j<=Model.ReportList.Count; j++)
+                                    {
+                                        <th>Phase @j</th>
+                                    }
                                 </tr>
                             </thead>
                             @{ var i = 1; }
                             <tbody>
+                                <tr>
+                                    <td></td>
+                                    <td><b>Success Rate:</b></td>
+                                    <td></td>
+                                    @foreach(var report in Model.ReportList)
+                                    {
+                                        <td>@report.SuccessRate.ToString("0.#")%</td>
+                                    }
+                                </tr>
                                 @foreach (var testInfo in Model.TestInfo) {
                                     <tr>
                                         <td>@(i++)</td>
                                         <td>@testInfo.Fixture</td>
-                                        <td class="name">@testInfo.Name</td>
+
+                                        <td class='test-name'>
+                                            @if (!String.IsNullOrEmpty(@testInfo.Description))
+                                            {
+                                                <a class='details-container showDescription name' href='#'>@testInfo.Name</a>
+                                                <p class='hide description'>@testInfo.Description</p>
+                                            }
+                                            else
+                                            {
+                                                <span class='name'>@testInfo.Name</span>
+                                            }
+                                        </td>
 
                                         @foreach (var status in testInfo.Statuses)
                                         {
